--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Lab 1</title>
+</head>
+
+<body>
+
+  <h1 class="header1">Andrew's Labs For INST377</h1>
+  <h2 class="header2">Album Name</h2>
+  <ol class="songs">
+    <li>Album 1</li>
+    <li>Album 2</li>
+    <li>Album 3</li>
+    <li>Album 4</li>
+    <li>Album 5</li>
+  </ol>
+
+  <h2>Image Carousel</h2>
+
+  <div class="images">
+    <img src="images/mochi1.jpg" width=300px>
+    <img src="images/mochi2.jpg" width=300px>
+    <img src="images/mochi4.jpeg" width=300px>
+    <img src="images/mochi5.jpg" width=300px>
+  </div>
+   
+  <p class="description" style=margin-bottom:0>Pictures of mochi for some reason</p>
+
+  <a href="https://github.com/ASM443/INST377-Lab-Work/tree/main/client/lab_1">ASM443</a>
+</body>
+
+
+</html>
+
+
+<!--
 include your HTML opening tags
 and your hidden "head" tag
 and your "title" tag
@@ -19,3 +57,5 @@ full-width container
 
 
 full-width page footer containing your name and a link to your gitHub account
+
+-->
