Added Album names and changed pictures

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -10,20 +10,20 @@
     <h1 class="header1">Andrew's Labs For INST377</h1>
     <h2 class="header2">Album Name</h2>
     <ol class="songs">
-    <li>Album 1</li>
-    <li>Album 2</li>
-    <li>Album 3</li>
-    <li>Album 4</li>
-    <li>Album 5</li>
+    <li>Justice - Woman</li>
+    <li>Delta Heavy - Only in Dreams</li>
+    <li>Flux Pavilion - .wav</li>
+    <li>Lil Wayne - Tha Carter III</li>
+    <li>Mac Miller - Swimming</li>
   </ol>
 
   <h2>Image Carousel</h2>
 
   <div class="images">
-    <img src="images/mochi1.jpg" width=300px>
-    <img src="images/mochi2.jpg" width=300px>
-    <img src="images/mochi4.jpeg" width=300px>
-    <img src="images/mochi5.jpg" width=300px>
+    <img src="images/mochi1.jpg" width=200px>
+    <img src="images/mochi2.gif" width=200px>
+    <img src="images/mochi3.png" width=200px>
+    <img src="images/mochi4.jpeg" width=200px>
   </div>
    
   <p class="description" style=margin-bottom:0>Pictures of mochi for some reason</p>
