--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -20,10 +20,10 @@
   <h2>Image Carousel</h2>
 
   <div class="images">
-    <img src="images/mochi1.jpg" width=200px>
-    <img src="images/mochi2.gif" width=200px>
-    <img src="images/mochi3.png" width=200px>
-    <img src="images/mochi4.jpeg" width=200px>
+    <img src="images/mochi.gif">
+    <img src="images/mochi.jpg">
+    <img src="images/mochi.png">
+    <img src="images/mochi.svg">
   </div>
    
   <p class="description" style=margin-bottom:0>Pictures of mochi for some reason</p>
