--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1 class="header1">Andrew's Labs For INST377</h1>
-    <h2 class="header2">Album Name</h2>
+    <h2 class="header2">Album Names</h2>
     <ol class="songs">
     <li>Justice - Woman</li>
     <li>Delta Heavy - Only in Dreams</li>
