--- a/client/tetris/index.html
+++ b/client/tetris/index.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
     <head>
         <meta charset="utf-8">
-        <script scr="aps.js" charset="utf=8"></script>
+        <script src="app.js" charset="utf-8"></script>
         <title>INST 377 Tetris</title>
         <link rel="stylesheet" href="style.css"> </link>
+        
     </head>
 
     <body>
