--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -24,8 +24,10 @@
             <div class="left_section box">
                 <h3>Form Inputs</h3>
                 <form action="/api" class="box main_form">
-                    <label for="resto">Resturant Name</label>
-                    <input type="text" name="resto" id="resto"/>
+                    <div>
+                        <label for="resto">Resturant Name</label>
+                        <input type="text" name="resto" id="resto"/>
+                    </div>
                     <button type="submit">Submit</button>
                 </form>
             </div>
