--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,20 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Lab 1</title>
+</head>
+
+<body>
+
+    <h1 class="header1">Andrew's Labs For INST377</h1>
+    <h2 class="header2">Album Names</h2>
+    <ol class="songs">
+    <li>Justice - Woman</li>
+    <li>Delta Heavy - Only in Dreams</li>
+    <li>Flux Pavilion - .wav</li>
+    <li>Lil Wayne - Tha Carter III</li>
+    <li>Mac Miller - Swimming</li>
+  </ol>
+
+  <h2>Image Carousel</h2>
+
+  <div class="images">
+    <img src="images/mochi.gif">
+    <img src="images/mochi.jpg">
+    <img src="images/mochi.png">
+    <img src="images/mochi.svg">
+  </div>
+   
+  <p class="description" style=margin-bottom:0>Pictures of mochi for some reason</p>
+
+  <a href="https://github.com/ASM443/INST377-Lab-Work/tree/main/client/lab_1">ASM443</a>
+</body>
+
+
+</html>
+
+
+<!--
 include your HTML opening tags
 and your hidden "head" tag
 and your "title" tag
 
+full-width header
+Prof A's Labs For INST377
 
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
+full-width container
+  centering wrapper
+    left div
+      restaurant name
+      food preference
+    right div
+      site body
+        image box
+          four images of mochi from your readings, all square
+        carousel description box
+          List your top 5 albums using an ordered list
 
 
-full-width page footer containing your github account name and a link to your gitHub account
+full-width page footer containing your name and a link to your gitHub account
+
+-->
