Working Random List

--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="right_section box">
                 <h3>Local Restaurants</h3>
-                <div class="restaurants_list box">A list of local restaurants from an API</div>
+                <div class="box" id="restaurants_list">A list of local restaurants from an API</div>
             </div>
 
             
